@@ -24,6 +24,9 @@ Package org.springframework.osgi.extender
 * added setter for delegated application context creator in ConditionalApplicationContextCreator
 * improved ApplicationContextConfiguration internal structure
 * added type filtering behaviour inside the extender so only Spring-compatible bundles are scanned and managed
+* removed internal usage of Thread.stop as it breaks the VM state
+* improved bundle shutdown by using a simple thread executor (rather then one thread per bundle model) to increase
+  scalability
 
 Package org.springframework.osgi.io
 * improved getFile() method when dealing with resources in expanded bundles
